Forgot to add vars plus fix on larger content header spacing to be more reasonable.

--- a/dev/assets/less/eight.less
+++ b/dev/assets/less/eight.less
@@ -74,7 +74,7 @@ margin-bottom: 72/@em;
 }
 
 #content header {
-padding-top: 72/@em;
+padding-top: 36/@em;
 }
 
 h2 {
